Collapse: Avoid being set globally
* Change scope of Bootstrap's `collapse` related rules to be scoped to nav-item component
* Write tests for collapse
* Update dependencies to latest versions
* Refactor test .js files to more ES6 conventions + prettier

--- a/scss/pack/seed-navbar/components/_navbar-collapse.scss
+++ b/scss/pack/seed-navbar/components/_navbar-collapse.scss
@@ -6,29 +6,30 @@
 @import "../config";
 
 @include export(seed-navbar) {
-  .#{$seed-navbar-collapse-namespace},
-  .#{$seed-navbar-item-namespace}.#{$seed-navbar-collapse-namespace} {
-    box-sizing: border-box;
-    display: none;
+  .#{$seed-navbar-item-namespace} {
+    &.#{$seed-navbar-collapse-namespace} {
+      box-sizing: border-box;
+      display: none;
 
-    @include breakpoint(md) {
-      display: block !important;
+      @include breakpoint(md) {
+        display: block !important;
+      }
+
+      // States
+      &.in,
+      &.show {
+        display: block;
+      }
     }
 
-    // States
-    &.in,
-    &.show {
-      display: block;
+    // Collapsing animation
+    &.#{$seed-navbar-collapsing-namespace} {
+      height: 0;
+      overflow: hidden;
+      position: relative;
+      transition-duration: 0.35s;
+      transition-property: height, visibility;
+      transition-timing-function: ease;
     }
-  }
-
-  // Collapsing animation
-  .#{$seed-navbar-collapsing-namespace} {
-    height: 0;
-    overflow: hidden;
-    position: relative;
-    transition-duration: 0.35s;
-    transition-property: height, visibility;
-    transition-timing-function: ease;
   }
 }
